Added some of the feedback

--- a/HapinessSurvey/app/src/main/res/layout/fragment_first.xml
+++ b/HapinessSurvey/app/src/main/res/layout/fragment_first.xml
@@ -7,24 +7,57 @@
     tools:context=".FirstFragment">
 
 
+    <Button
+        android:id="@+id/StartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Begrepen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="292dp"
-        android:layout_height="98dp"
-        android:layout_marginTop="196dp"
-        android:text="Welkom, Bij deze app worden u verschillende vragen gesteld om te kijken hoe tevreden u bent over uw buurt. Vul deze vragenlijst eerlijk in en aan het eind zult u tips krijgen waarmee u uw tevredenheid kan verhogen."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Welcome"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/StartButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:text="Begrepen"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="255dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="92dp"
+        android:text="This a hapiness survey, with 6 simple questions this app can give you some tips to improve your hapiness"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="254dp"
+        android:layout_height="60dp"
+        android:text="The information you fill in will  be only used to make a prediction, after the prediction the data will be deleted."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="238dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="40dp"
+        android:text='You can press the button "confirm" if you want to proceed with the survey'
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
