--- a/HapinessSurvey/app/src/main/res/layout/fragment_second.xml
+++ b/HapinessSurvey/app/src/main/res/layout/fragment_second.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/textview_question"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="258dp"
+        android:layout_height="63dp"
         android:text="Example"
         app:layout_constraintBottom_toTopOf="@id/button_first"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,4 +37,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_question" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="262dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="116dp"
+        android:text="Please provide a rating with how much you agree with this statement."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
